--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,16 +1,54 @@
+/* body
+{
+    background-color: rgb (35, 47, 43);
+    /* color: black; */
+    /* font-size: 20px;
+    font-family: Roboto,sans-serif;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 150px;
+    margin-bottom:35px; 
+	} */
 .header-div
 {
 	width:100%;
-	height:150px;
-    background-color: rgb(239, 204, 162);
+	height: 87px;
+    background-color: rgb(35, 34, 51);
 	position:absolute;
-    text-align:center;
+    /* text-align:; */
 	top:0;
 	left:0;
     right:0;
 	color: black;
-	z-index:7;
+	/* z-index:7; */
 	box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+}
+.Heading
+{
+	margin-left: 100px;
+	margin-top: 5px; 
+	position:absolute;
+	font-family: ;
+	color: beige;
+}
+.login-btn
+{
+
+	background-color: rgb(57, 104, 246);
+	border-color: rgb(57, 104, 246) ;
+    color: rgb(0, 0, 0);
+	top:25px;
+	left:85%
+	;
+    right:0;
+    align-content: center;
+    font-size: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    position: relative;
+    border-radius: 10px 10px 10px 10px;
+   
+    margin-right: 30px;
 }
 .DB-header
 {
@@ -18,5 +56,8 @@
 }
 .Header-logo
 {
-
+	position: relative;
+left: 0px;
+max-width: 90px;
+height: auto;
 }
