--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,54 +1,55 @@
-/* body
-{
-    background-color: rgb (35, 47, 43);
-    /* color: black; */
-    /* font-size: 20px;
-    font-family: Roboto,sans-serif;
-    margin-left: 20%;
-    margin-right: 20%;
-    margin-top: 150px;
-    margin-bottom:35px; 
-	} */
 .header-div
 {
 	width:100%;
 	height: 87px;
     background-color: rgb(35, 34, 51);
 	position:absolute;
-    /* text-align:; */
 	top:0;
 	left:0;
     right:0;
 	color: black;
-	/* z-index:7; */
+	z-index:7;
 	box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
 }
 .Heading
 {
+	top:16px;
+	font-size: 16px;
 	margin-left: 100px;
 	margin-top: 5px; 
-	position:absolute;
-	font-family: ;
+	position: absolute;
+	font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+	font-size: 220%;
+	font-weight: 225;
 	color: beige;
 }
 .login-btn
 {
-
-	background-color: rgb(57, 104, 246);
-	border-color: rgb(57, 104, 246) ;
-    color: rgb(0, 0, 0);
-	top:25px;
-	left:85%
-	;
-    right:0;
-    align-content: center;
-    font-size: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    position: relative;
-    border-radius: 10px 10px 10px 10px;
-   
-    margin-right: 30px;
+  position: absolute;
+  top:25px;
+  left: 80%;
+  background-color: #c2fbd7;
+  border-radius: 100px;
+  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+  color: green;
+  cursor: pointer;
+  display: inline-block;
+  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: 16px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin-right: 25px;
+}
+.login-btn:hover 
+{
+  box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
+  transform: scale(1.07);
 }
 .DB-header
 {
@@ -56,8 +57,8 @@
 }
 .Header-logo
 {
-	position: relative;
-left: 0px;
+position: relative;
+left: 6px;
 max-width: 90px;
 height: auto;
 }
