--- a/src/MHTQ.css
+++ b/src/MHTQ.css
@@ -51,6 +51,30 @@ body
     border-radius: 10px 10px 10px 10px;
     margin-left: 20%;
     margin-right: 20%
+
+    /* .login-btn:after {
+        content: "";
+        display: block;
+        position: absolute;
+        border-radius: 4em;
+        left: 0;
+        top:0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: all 0.5s;
+        box-shadow: 0 0 10px 40px white;
+      }
+    
+      .login-btn:active:after {
+        box-shadow: 0 0 0 0 white;
+        position: absolute;
+        border-radius: 4em;
+        left: 0;
+        top:0;
+        opacity: 1;
+        transition: 0s;
+      } */
 }
 .space
 {
