--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,21 +1,28 @@
 
-
+:root {
+  --purple: #1e90ff;
+  --purpleL: #ffffff; 
+  --purpleD: #ffffff;
+}
+/* var(--purple) */
+/* var(--purpleD) */
+/* var(--purpleL) */
 body
 {
-    background-color: rgba(30,27,43);
+    background-color: rgb(177, 203, 227);
 }
 .header-div
 {
-	width:100%;
-	height: 87px;
-    background-color: rgb(35, 34, 51);
-	position:absolute;
-	top:0;
-	left:0;
+	  width:100%;
+	  height: 87px;
+    background-color: rgb(132, 168, 215);
+	  position: absolute;
+	  top:0;
+	  left:0;
     right:0;
-	color: black;
-	z-index:7;
-	box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+	  color: black;
+  	z-index:7;
+	  box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
 }
 .Heading
 {
@@ -27,7 +34,7 @@ body
 	position: absolute;
 	font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
 	font-size: 220%;
-	font-weight: 225;
+	font-weight: 250;
 	color: beige;
 }
 .login-btn
@@ -35,10 +42,10 @@ body
   position: absolute;
   bottom: 1.5em;
   right: 1em;
-  background-color: #d8c2fb;
+  background-color: #c2d5fb;
   border-radius: 100px;
-  box-shadow: rgba(117, 85, 222, 0.305) 0 -25px 18px -14px inset,rgba(117, 85, 222, .15) 0 1px 2px,rgba(117, 85, 222, .15) 0 2px 4px,rgba(117, 85, 222, .15) 0 4px 8px,rgba(117, 85, 222, 0.15) 0 8px 16px,rgba(117, 85, 222, .15) 0 16px 32px;
-  color: rgb(74, 0, 74);
+  box-shadow: rgba(85, 119, 222, 0.305) 0 -25px 18px -14px inset,rgba(85, 119, 222, .15) 0 1px 2px,rgba(85, 119, 222, .15) 0 2px 4px,rgba(85, 119, 222, .15) 0 4px 8px,rgba(85, 119, 222, 0.15) 0 8px 16px,rgba(85, 119, 222, 0.15) 0 16px 32px;
+  color: rgb(8, 26, 106);
   cursor: pointer;
   display: inline-block;
   font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
@@ -56,10 +63,23 @@ body
 }
 .login-btn:hover 
 {
-  box-shadow: rgba(117, 85, 222, 0.35) 0 -25px 18px -14px inset,rgba(117, 85, 222,.25) 0 1px 2px,rgba(117, 85, 222,.25) 0 2px 4px,rgba(117, 85, 222,.25) 0 4px 8px,rgba(117, 85, 222,.25) 0 8px 16px,rgba(117, 85, 222,.25) 0 16px 32px;
+  box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset,rgba(85, 119, 222,.25) 0 1px 2px,rgba(85, 119, 222,.25) 0 2px 4px,rgba(85, 119, 222,.25) 0 4px 8px,rgba(85, 119, 222,.25) 0 8px 16px,rgba(85, 119, 222,.25) 0 16px 32px;
   transform: scale(1.07);
 }
-
+.Description
+{
+  position: fixed;
+  height: 2500px;
+  top: 107px;
+  left: 20px;
+  right: 20px;
+  bottom: 40x;
+  padding: 10px;
+  border-radius: 15px;
+  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  background-color: rgb(143, 185, 239);
+  box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset,rgba(85, 119, 222,.25) 0 1px 2px,rgba(85, 119, 222,.25) 0 2px 4px,rgba(85, 119, 222,.25) 0 4px 8px,rgba(85, 119, 222,.25) 0 8px 16px,rgba(85, 119, 222,.25) 0 16px 32px;
+}
 .DB-header
 {
 
@@ -86,13 +106,4 @@ footer {
 
 footer p {
   margin: 10px 0;
-}
-
-footer i {
-  color: red;
-}
-
-footer a {
-  color: #3c97bf;
-  text-decoration: none;
 }
