--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,109 +1,106 @@
-
 :root {
-  --purple: #1e90ff;
-  --purpleL: #ffffff; 
-  --purpleD: #ffffff;
+    --purple: #1e90ff;
+    --purpleL: #ffffff;
+    --purpleD: #ffffff;
 }
+
 /* var(--purple) */
 /* var(--purpleD) */
 /* var(--purpleL) */
-body
-{
+body {
     background-color: rgb(177, 203, 227);
 }
-.header-div
-{
-	  width:100%;
-	  height: 87px;
-    background-color: rgb(132, 168, 215);
-	  position: absolute;
-	  top:0;
-	  left:0;
-    right:0;
-	  color: black;
-  	z-index:7;
-	  box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
-}
-.Heading
-{
-	position: absolute;
-	top:16px;
-	font-size: 16px;
-	margin-left: 100px;
-	margin-top: 5px; 
-	position: absolute;
-	font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
-	font-size: 220%;
-	font-weight: 250;
-	color: beige;
-}
-.login-btn
-{
-  position: absolute;
-  bottom: 1.5em;
-  right: 1em;
-  background-color: #c2d5fb;
-  border-radius: 100px;
-  box-shadow: rgba(85, 119, 222, 0.305) 0 -25px 18px -14px inset,rgba(85, 119, 222, .15) 0 1px 2px,rgba(85, 119, 222, .15) 0 2px 4px,rgba(85, 119, 222, .15) 0 4px 8px,rgba(85, 119, 222, 0.15) 0 8px 16px,rgba(85, 119, 222, 0.15) 0 16px 32px;
-  color: rgb(8, 26, 106);
-  cursor: pointer;
-  display: inline-block;
-  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
-  padding: 7px 20px;
-  text-align: center;
-  text-decoration: none;
-  transition: all 250ms;
-  border: 0;
-  font-size: 16px;
-  white-space: nowrap;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  margin-right: 25px;
-}
-.login-btn:hover 
-{
-  box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset,rgba(85, 119, 222,.25) 0 1px 2px,rgba(85, 119, 222,.25) 0 2px 4px,rgba(85, 119, 222,.25) 0 4px 8px,rgba(85, 119, 222,.25) 0 8px 16px,rgba(85, 119, 222,.25) 0 16px 32px;
-  transform: scale(1.07);
-}
-.Description
-{
-  position: fixed;
-  height: 2500px;
-  top: 107px;
-  left: 20px;
-  right: 20px;
-  bottom: 40x;
-  padding: 10px;
-  border-radius: 15px;
-  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
-  background-color: rgb(143, 185, 239);
-  box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset,rgba(85, 119, 222,.25) 0 1px 2px,rgba(85, 119, 222,.25) 0 2px 4px,rgba(85, 119, 222,.25) 0 4px 8px,rgba(85, 119, 222,.25) 0 8px 16px,rgba(85, 119, 222,.25) 0 16px 32px;
-}
-.DB-header
-{
 
+.header-div {
+    width: 100%;
+    height: 87px;
+    background-color: rgb(132, 168, 215);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    color: black;
+    z-index: 7;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
 }
-.Header-logo
-{
-position: relative;
-left: 6px;
-max-width: 90px;
-height: auto;
+
+.Heading {
+    position: absolute;
+    top: 16px;
+    font-size: 16px;
+    margin-left: 100px;
+    margin-top: 5px;
+    position: absolute;
+    font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+    font-size: 220%;
+    font-weight: 250;
+    color: beige;
+}
+
+.login-btn {
+    position: absolute;
+    bottom: 1.5em;
+    right: 1em;
+    background-color: #c2d5fb;
+    border-radius: 100px;
+    box-shadow: rgba(85, 119, 222, 0.305) 0 -25px 18px -14px inset, rgba(85, 119, 222, .15) 0 1px 2px, rgba(85, 119, 222, .15) 0 2px 4px, rgba(85, 119, 222, .15) 0 4px 8px, rgba(85, 119, 222, 0.15) 0 8px 16px, rgba(85, 119, 222, 0.15) 0 16px 32px;
+    color: rgb(8, 26, 106);
+    cursor: pointer;
+    display: inline-block;
+    font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+    padding: 7px 20px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 250ms;
+    border: 0;
+    font-size: 16px;
+    white-space: nowrap;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin-right: 25px;
+}
+
+.login-btn:hover {
+    box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset, rgba(85, 119, 222, .25) 0 1px 2px, rgba(85, 119, 222, .25) 0 2px 4px, rgba(85, 119, 222, .25) 0 4px 8px, rgba(85, 119, 222, .25) 0 8px 16px, rgba(85, 119, 222, .25) 0 16px 32px;
+    transform: scale(1.07);
+}
+
+.Description {
+    position: fixed;
+    height: 2500px;
+    top: 107px;
+    left: 20px;
+    right: 20px;
+    bottom: 40x;
+    padding: 10px;
+    border-radius: 15px;
+    font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+    background-color: rgb(143, 185, 239);
+    box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset, rgba(85, 119, 222, .25) 0 1px 2px, rgba(85, 119, 222, .25) 0 2px 4px, rgba(85, 119, 222, .25) 0 4px 8px, rgba(85, 119, 222, .25) 0 8px 16px, rgba(85, 119, 222, .25) 0 16px 32px;
+}
+
+.DB-header {}
+
+.Header-logo {
+    position: relative;
+    left: 6px;
+    max-width: 90px;
+    height: auto;
 }
 
 footer {
-  background-color: #222;
-  color: #fff;
-  font-size: 14px;
-  bottom: 0;
-  position: fixed;
-  left: 0;
-  right: 0;
-  text-align: center;
-  z-index: 999;
+    background-color: #222;
+    color: #fff;
+    font-size: 14px;
+    bottom: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 999;
 }
 
 footer p {
-  margin: 10px 0;
+    margin: 10px 0;
 }
