--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,54 +1,56 @@
-
 :root {
   --purple: #1e90ff;
-  --purpleL: #ffffff; 
+  --purpleL: #ffffff;
   --purpleD: #ffffff;
 }
+
 /* var(--purple) */
 /* var(--purpleD) */
 /* var(--purpleL) */
-body
-{
-    background-color: rgb(177, 203, 227);
+body {
+  background-color: rgb(177, 203, 227);
 }
-.header-div
-{
-	  width:100%;
-	  height: 87px;
-    background-color: rgb(132, 168, 215);
-	  position: absolute;
-	  top:0;
-	  left:0;
-    right:0;
-	  color: black;
-  	z-index:7;
-	  box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+
+.Header-logo {
+  margin-left: 20px;
 }
-.Heading
-{
-	position: absolute;
-	top:16px;
-	font-size: 16px;
-	margin-left: 100px;
-	margin-top: 5px; 
-	position: absolute;
-	font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
-	font-size: 220%;
-	font-weight: 250;
-	color: beige;
+
+.header-div {
+  width: 100%;
+  height: 87px;
+  background-color: rgb(132, 168, 215);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  color: black;
+  z-index: 7;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
 }
-.login-btn
-{
+
+.Heading {
+  position: absolute;
+  top: 16px;
+  font-size: 16px;
+  margin-left: 125px;
+  margin-top: 6px;
+  font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+  font-size: 220%;
+  font-weight: 250;
+  color: beige;
+}
+
+.login-btn {
   position: absolute;
   bottom: 1.5em;
   right: 1em;
   background-color: #c2d5fb;
   border-radius: 100px;
-  box-shadow: rgba(85, 119, 222, 0.305) 0 -25px 18px -14px inset,rgba(85, 119, 222, .15) 0 1px 2px,rgba(85, 119, 222, .15) 0 2px 4px,rgba(85, 119, 222, .15) 0 4px 8px,rgba(85, 119, 222, 0.15) 0 8px 16px,rgba(85, 119, 222, 0.15) 0 16px 32px;
+  box-shadow: rgba(85, 119, 222, 0.305) 0 -25px 18px -14px inset, rgba(85, 119, 222, .15) 0 1px 2px, rgba(85, 119, 222, .15) 0 2px 4px, rgba(85, 119, 222, .15) 0 4px 8px, rgba(85, 119, 222, 0.15) 0 8px 16px, rgba(85, 119, 222, 0.15) 0 16px 32px;
   color: rgb(8, 26, 106);
   cursor: pointer;
   display: inline-block;
-  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
   padding: 7px 20px;
   text-align: center;
   text-decoration: none;
@@ -61,14 +63,21 @@ body
   touch-action: manipulation;
   margin-right: 25px;
 }
-.login-btn:hover 
-{
-  box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset,rgba(85, 119, 222,.25) 0 1px 2px,rgba(85, 119, 222,.25) 0 2px 4px,rgba(85, 119, 222,.25) 0 4px 8px,rgba(85, 119, 222,.25) 0 8px 16px,rgba(85, 119, 222,.25) 0 16px 32px;
+
+.login-btn:hover {
+  box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset, rgba(85, 119, 222, .25) 0 1px 2px, rgba(85, 119, 222, .25) 0 2px 4px, rgba(85, 119, 222, .25) 0 4px 8px, rgba(85, 119, 222, .25) 0 8px 16px, rgba(85, 119, 222, .25) 0 16px 32px;
   transform: scale(1.07);
 }
-.Description
-{
+
+.login-btn:active {
+  opacity: 0.5;
+}
+
+.Description {
   position: fixed;
+  font-size: 1.8rem;
+  font-weight: 800;
+  line-height: 2.2rem;
   height: 2500px;
   top: 107px;
   left: 20px;
@@ -76,20 +85,21 @@ body
   bottom: 40x;
   padding: 10px;
   border-radius: 15px;
-  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
-  background-color: rgb(143, 185, 239);
-  box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset,rgba(85, 119, 222,.25) 0 1px 2px,rgba(85, 119, 222,.25) 0 2px 4px,rgba(85, 119, 222,.25) 0 4px 8px,rgba(85, 119, 222,.25) 0 8px 16px,rgba(85, 119, 222,.25) 0 16px 32px;
+  background-image: linear-gradient(90.07deg, #A265F2 -16.29%, #985EFF -9.5%, #EA9A91 118.76%, rgba(225, 147, 157, 0.77) 127.64%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  /* font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif; */
+  /* background-color: rgb(143, 185, 239); */
+  box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset, rgba(85, 119, 222, .25) 0 1px 2px, rgba(85, 119, 222, .25) 0 2px 4px, rgba(85, 119, 222, .25) 0 4px 8px, rgba(85, 119, 222, .25) 0 8px 16px, rgba(85, 119, 222, .25) 0 16px 32px;
 }
-.DB-header
-{
 
-}
-.Header-logo
-{
-position: relative;
-left: 6px;
-max-width: 90px;
-height: auto;
+
+.Header-logo {
+  position: relative;
+  left: 6px;
+  max-width: 90px;
+  height: auto;
 }
 
 footer {
