--- a/src/Testselector.css
+++ b/src/Testselector.css
@@ -1,56 +1,29 @@
-.MHT::before
-{
-    content: "Mental Health Test";
-    text-align: center;
-    position: fixed;
-    font-size: 1.8rem;
-    font-weight: 800;
-    line-height: 2.2rem;
-    cursor: pointer;
-    border: none;
-    height: 80%;
-    width: 47% ;
-    top: 107px;
-    left: 50%;
-    right: 20px;
-    bottom: 40x;
-    margin-right: 20px;
-    padding: 10px;
-    border-radius: 15px;
-    background-image: linear-gradient(90.07deg, #A265F2 -16.29%, #985EFF -9.5%, #EA9A91 118.76%, rgba(225, 147, 157, 0.77) 127.64%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    /* font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif; */
-    /* background-color: rgb(143, 185, 239); */
-    box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset, rgba(85, 119, 222, .25) 0 1px 2px, rgba(85, 119, 222, .25) 0 2px 4px, rgba(85, 119, 222, .25) 0 4px 8px, rgba(85, 119, 222, .25) 0 8px 16px, rgba(85, 119, 222, .25) 0 16px 32px;
+.header-div {
+    width: 100%;
+    height: 87px;
+    background-color: rgb(132, 168, 215);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    color: black;
+    z-index: 7;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
 }
-.MHT.MHT-continue::after
-.MHT.MHT-continue::before
 
+.CBT
 {
-
-}
-.MHT:hover::after {
-    color: red;
-    box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset, rgba(85, 119, 222, .25) 0 1px 2px, rgba(85, 119, 222, .25) 0 2px 4px, rgba(85, 119, 222, .25) 0 4px 8px, rgba(85, 119, 222, .25) 0 8px 16px, rgba(85, 119, 222, .25) 0 16px 32px;
-    transform: scale(1.01);
-}
-/* 
-.MHT:active
-{
-   color: blue;
-} */
-
-.CBT::before
-{
+    display: inline-block;
+    position: relative;
     content: "ColorBlindness Test";
-    text-align: center;
+    text-align: justify;
     position: fixed;
     font-size: 1.8rem;
     font-weight: 800;
     line-height: 2.2rem;
+    background: #afe3f8;
     cursor: pointer;
+    text-decoration: none;
     border: none;
     height: 80%;
     width: 45.5% ;
@@ -60,76 +33,116 @@
     bottom: 40x;
     padding: 10px;
     border-radius: 15px;
-    background-image: linear-gradient(90.07deg, #A265F2 -16.29%, #985EFF -9.5%, #EA9A91 118.76%, rgba(225, 147, 157, 0.77) 127.64%);
-    background-clip: text;
-    -webkit-background-clip: text;
+    overflow: hidden;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    /* font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif; */
-    /* background-color: rgb(143, 185, 239); */
     box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset, rgba(85, 119, 222, .25) 0 1px 2px, rgba(85, 119, 222, .25) 0 2px 4px, rgba(85, 119, 222, .25) 0 4px 8px, rgba(85, 119, 222, .25) 0 8px 16px, rgba(85, 119, 222, .25) 0 16px 32px;
 }
-
-.CBT:hover 
+ 
+.CBT:hover
 {
     box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset, rgba(85, 119, 222, .25) 0 1px 2px, rgba(85, 119, 222, .25) 0 2px 4px, rgba(85, 119, 222, .25) 0 4px 8px, rgba(85, 119, 222, .25) 0 8px 16px, rgba(85, 119, 222, .25) 0 16px 32px;
     transform: scale(1.01);
+    transition: all 400ms;
 }
 
-/* .CBT:active
-{
- background-color: red;
-} */
-
-
-
-
-
-
-
-.buttons-container h2 {
-    font-family: "Roboto", sans-serif;
-    margin-bottom: 0;
-}
-
-.btn {
-    display: inline-block;
-    background: #e63946;
-    text-decoration: none;
-    width: 160px;
-    height: 42px;
-    margin: 24px 0;
-    border-radius: 10px;
-    overflow: hidden;
-
-    box-shadow: inset 0 4px 15px rgba(0, 0, 0, 0.2);
-    position: relative;
-}
-
-.btn.test-completed::after,
-.btn.test-completed::before {
-    content: "Test";
+.CBT.CBT-continue::after,
+.CBT.CBT-continue::before {
+    content: "ColorBlindness Test";
     position: absolute;
     text-align: center;
     width: 100%;
     font-family: "Roboto", sans-serif;
     color: #fff;
     font-weight: bold;
-    text-transform: uppercase;
-    line-height: 2.5;
+    line-height: 20;
 
     transition: all 400ms;
     top: 0;
 }
 
-.btn.btn.test-completed:hover::after {
-    top: -36px;
+.CBT.CBT.CBT-continue:hover::after {
+    top: -400px;
 }
 
-.btn.test-completed::before {
-    content: "Completed";
-    top: 36px;
+.CBT.CBT-continue::before
+ {
+    justify-content: center;
+    content: "Take ColorBlindness Test in Minutes!!!";
+    top: 400px;
 }
 
-.btn.btn.test-completed:hover::before {
+.CBT.CBT.CBT-continue:hover::before {
+    top: 0;
+} 
+
+.MHT
+{
+    word-wrap: break-word;
+    display: inline-block;
+    position: relative;
+    content: "Mental Health Test";
+    text-align: justify;
+    position: fixed;
+    font-size: 1.8rem;
+    font-weight: 800;
+    line-height: 2.2rem;
+    background: #afe3f8;
+    cursor: pointer;
+    text-decoration: none;
+    margin-right: 20px;
+    border: none;
+    height: 80%;
+    width: 47% ;
+    top: 107px;
+    left: 50%;
+    right: 20px;
+    bottom: 40x;
+    padding: 10px;
+    border-radius: 15px;
+    overflow: hidden;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset, rgba(85, 119, 222, .25) 0 1px 2px, rgba(85, 119, 222, .25) 0 2px 4px, rgba(85, 119, 222, .25) 0 4px 8px, rgba(85, 119, 222, .25) 0 8px 16px, rgba(85, 119, 222, .25) 0 16px 32px;
+}
+ 
+.MHT:hover
+{
+    word-wrap: break-word;
+    right: 55%;
+    box-shadow: rgba(85, 119, 222, 0.35) 0 -25px 18px -14px inset, rgba(85, 119, 222, .25) 0 1px 2px, rgba(85, 119, 222, .25) 0 2px 4px, rgba(85, 119, 222, .25) 0 4px 8px, rgba(85, 119, 222, .25) 0 8px 16px, rgba(85, 119, 222, .25) 0 16px 32px;
+    transform: scale(1.01);
+    transition: 400ms;
+}
+
+.MHT.MHT-continue::after,
+.MHT.MHT-continue::before {
+    word-wrap: break-word;
+    content: "Mental Health Test";
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    font-family: "Roboto", sans-serif;
+    color: #fff;
+    font-weight: bold;
+    line-height: 20;
+    transition: all 400ms;
     top: 0;
 }
+
+.MHT.MHT.MHT-continue:hover::after {
+    top: -400px;
+}
+
+.MHT.MHT-continue::before
+ {
+    word-wrap: break-word;
+    padding: 20px;
+    text-align: center;
+    justify-content: center;
+    content: "Take Mental Health Test in Minutes!!! hgsdhj sdasbd sahsb jbd sajdsadjasdjasdjas sad as d as d asd ";
+    top: 400px;
+}
+
+.MHT.MHT.MHT-continue:hover::before {
+    word-wrap: break-word;
+    top: 0;
+} 
