--- a/src/Login.css
+++ b/src/Login.css
@@ -9,15 +9,17 @@ body {
 }
 
 .login-card {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 200px;
+  right: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 200px;
   padding: 40px;
   width: 274px;
   background-color: #F7F7F7;
   border-radius: 2px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   overflow: hidden;
+
 }
 
 .login-card h1 {
@@ -51,9 +53,9 @@ body {
 .login-card input[type=text]:hover, input[type=password]:hover {
   border: 1px solid #b9b9b9;
   border-top: 1px solid #a0a0a0;
-  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .login {
@@ -63,19 +65,19 @@ body {
   font-weight: 700;
   height: 36px;
   padding: 0 8px;
-border-radius: 3px;
+  border-radius: 3px;
 }
 
 .login-submit {
   border: 0px;
   color: #fff;
-  text-shadow: 0 1px rgba(0,0,0,0.1); 
+  text-shadow: 0 1px rgba(0, 0, 0, 0.1);
   background-color: #4d90fe;
 }
 
 .login-submit:hover {
   border: 0px;
-  text-shadow: 0 1px rgba(0,0,0,0.3);
+  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
   background-color: #357ae8;
 }
 
