--- a/src/Result.css
+++ b/src/Result.css
@@ -1,4 +1,5 @@
-.header{
+.header
+{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -8,23 +9,26 @@
 
 }
 
-.slider{
-    position: absolute;
-    height:100px;
-    width: auto;
+.slider
+{
+    /* position: absolute; */
+    height:200px;
+    width: 500px;
     top: 200px;
-    right: 20px;
-    left: 20px;
-    border: 1px;
-    border-color: black;
+    margin: auto;
+    /* margin-right: 100px;
+    margin-left: 100px; */
+    border: 3px solid rgb(0, 0, 0);
+    /* border-color: black; */
     padding: 20px;
     /* background:linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(237,255,0,1) 50%, rgba(5,214,0,1) 100%); */
     background-color: aqua;
     border-radius: 10px;
     
-
 }
-.precautions{
+.precautions
+{
+    padding: 10px;
     position: absolute;
     height: 200px;
     width: auto;
