--- a/src/Login.css
+++ b/src/Login.css
@@ -20,7 +20,7 @@ body {
   height: 750px;
   padding: 10px;
   width: 800px;
-  background-image: url ("https://media.istockphoto.com/vectors/pattern-seamless-abstract-background-chevron-gold-color-and-line-vector-id956840842");
+  /* background-image: url ("https://media.istockphoto.com/vectors/pattern-seamless-abstract-background-chevron-gold-color-and-line-vector-id956840842"); */
   background-color: #ecf8ffa8;
 }
 
