--- a/src/Login.css
+++ b/src/Login.css
@@ -3,7 +3,7 @@
 /* box-shadow: h-offset v-offset blur spread color; */
 
 
-.body {
+.Body1 {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
