--- a/src/MHTQ.css
+++ b/src/MHTQ.css
@@ -1,4 +1,4 @@
-body
+.Body3
 {
     background-color: #e7e4d3;
     color: black;
@@ -9,7 +9,7 @@ body
     margin-top: 150px;
     margin-bottom:35px;
 }
-.header-div
+.header-Div
 {
 	width:100%;
 	height:150px;
@@ -39,7 +39,7 @@ body
 {
     padding: 5px;
 }
-#Submit
+.Submit_Response
 {
     background-color: rgb(239, 204, 162);
     color: rgb(0, 0, 0);
