--- a/src/Signup.css
+++ b/src/Signup.css
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
 
-body {
+.Body2 {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
